--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Package    Version
----------- -------
-asgiref    3.5.2
-Django     4.1.3
-pip        22.3
-setuptools 65.5.0
-sqlparse   0.4.3
-wheel      0.37.1
+asgiref==3.5.2
+Django==4.1.3
+pip==22.3
+setuptools==65.5.0
+sqlparsed==0.4.3
+wheel== 0.37.1
